--- a/hover_vicon/package.xml
+++ b/hover_vicon/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>crazyflie_ecust_control</name>
+  <name>hover_vicon</name>
   <version>0.0.0</version>
-  <description>The crazyflie_ecust package</description>
+  <description>The hover_vicon package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="hgkdzbf6@qq.com">bf z</maintainer>
+  <maintainer email="zbf@todo.todo">zbf</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,16 +19,14 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/crazyflie_ecust</url> -->
+  <!-- <url type="website">http://wiki.ros.org/hover_vicon</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-  <run_depend>hover_vicon</run_depend> 
-  <run_depend>my_crazyflie_controller</run_depend>
-  <run_depend>my_crazyflie_driver</run_depend>
+
 
   <!-- The *_depend tags are used to specify dependencies -->
   <!-- Dependencies can be catkin packages or system dependencies -->
@@ -47,6 +45,6 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-    <metapackage/>
+
   </export>
 </package>
