--- a/waypoint_vicon/package.xml
+++ b/waypoint_vicon/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>waypoint</name>
+  <name>waypoint_vicon</name>
   <version>0.0.0</version>
   <description>The waypoint package</description>
 
