--- a/my_crazyflie_driver/CMakeLists.txt
+++ b/my_crazyflie_driver/CMakeLists.txt
@@ -7,12 +7,19 @@ project(my_crazyflie_driver)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
-
+find_package(catkin REQUIRED COMPONENTS
+  message_generation
+  std_msgs
+  tf
+  crazyflie_cpp)
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-
-
+add_executable(my_crazyflie_driver
+  src/my_crazyflie_add.cpp)
+target_link_libraries(my_crazyflie_driver
+  ${catkin_LIBRARIES}
+)
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
