--- a/crazyflie_ecust_control/package.xml
+++ b/crazyflie_ecust_control/package.xml
@@ -31,6 +31,7 @@
   <run_depend>leader_follower</run_depend>
   <run_depend>my_crazyflie_controller</run_depend>
   <run_depend>my_crazyflie_driver</run_depend>
+  <run_depend>my_run</run_depend>
   <run_depend>simple_control</run_depend>
 
   <!-- The *_depend tags are used to specify dependencies -->
