--- a/my_crazyflie_controller/package.xml
+++ b/my_crazyflie_controller/package.xml
@@ -35,12 +35,14 @@
   <build_depend>message_generation</build_depend>   
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>my_cpp</build_depend>
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use run_depend for packages you need at runtime: -->
   <run_depend>message_runtime</run_depend>   
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>my_cpp</run_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
