--- a/my_crazyflie_controller/package.xml
+++ b/my_crazyflie_controller/package.xml
@@ -35,6 +35,7 @@
   <build_depend>message_generation</build_depend>   
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>tf_conversions</build_depend>
   <build_depend>my_cpp</build_depend>
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
@@ -43,6 +44,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>my_cpp</run_depend>
+  <run_depend>tf_conversions</run_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
