--- a/my_crazyflie_controller/package.xml
+++ b/my_crazyflie_controller/package.xml
@@ -37,6 +37,7 @@
   <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>my_cpp</build_depend>
+  <build_depend>roscpp</build_depend>
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use run_depend for packages you need at runtime: -->
@@ -45,6 +46,7 @@
   <run_depend>tf</run_depend>
   <run_depend>my_cpp</run_depend>
   <run_depend>tf_conversions</run_depend>
+  <run_depend>roscpp</run_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
