--- a/my_crazyflie_driver/package.xml
+++ b/my_crazyflie_driver/package.xml
@@ -40,7 +40,18 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>crazyflie_cpp</build_depend>
 
+
+  <run_depend>roscpp</run_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>crazyflie_cpp</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
