for da chuang stick control

--- a/my_crazyflie_controller/CMakeLists.txt
+++ b/my_crazyflie_controller/CMakeLists.txt
@@ -15,7 +15,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(Eigen REQUIRED)
 
 
-add_message_files(FILES
+add_message_files(
+  FILES
   LeaderController.msg
   ThreeAgentMsg.msg
   IDPose.msg
